updating changes and cleaning code

--- a/cacheImplementation/appsettings.json
+++ b/cacheImplementation/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "niteshconnection" : "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=TodaysTasks;Integrated Security=True;Multiple Active Result Sets=True; TrustServerCertificate=True;"
+    "niteshconnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=TodaysTasks;Integrated Security=True;Multiple Active Result Sets=True; TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "Test.com"
   }
 }
