adding IAuthorizationFilter in the branch

--- a/cacheImplementation/appsettings.json
+++ b/cacheImplementation/appsettings.json
@@ -5,12 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "this is my custom Secret key for authentication",
+    "Issuer": "Test.com"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "niteshconnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=TodaysTasks;Integrated Security=True;Multiple Active Result Sets=True; TrustServerCertificate=True;"
-  },
-  "Jwt": {
-    "Key": "ThisismySecretKey",
-    "Issuer": "Test.com"
   }
 }
